# evolutionary-model-merge

./: .gitignore  LICENSE  README.md  evaluate.py  pyproject.toml
.github/workflows/: black.yaml
configs/llm/: abel-7b-002.yaml  arithmo2-mistral-7b.yaml  evollm-v1-jp-10b.yaml  evollm-v1-jp-7b-a.yaml  evollm-v1-jp-7b.yaml  shisa-gamma-7b-v1.yaml  wizardmath-7b-v1-1.yaml
configs/vlm/: evovlm-v1-jp-7b.yaml  heron-v1.yaml  jsvlm.yaml  llava-1-6-mistral-7b.yaml
evomerge/: __init__.py  utils.py
evomerge/eval/: __init__.py  ja_mgsm.py  ja_vg_vqa.py  ja_vlm_wild.py  metrics.py  utils.py
evomerge/models/: __init__.py  causallm.py  heron_v1.py  jsvlm.py  llava.py  prompt_templates.py  utils.py
evomerge/modules/heron/video_blip/: __init__.py  bert.py  configuration_video_blip.py  modeling_video_blip.py  processing_video_blip.py
